module-mtcq/src/main/java/openllet/mtcq/parser/MTCQParser.java
// Generated from MTCQ.g4 by ANTLR 4.13.2
package openllet.mtcq.parser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class MTCQParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, X_TERMINAL=12, XB_TERMINAL=13, UI_TERMINAL=14, U_TERMINAL=15, 
		RI_TERMINAL=16, R_TERMINAL=17, FI_TERMINAL=18, F_TERMINAL=19, GI_TERMINAL=20, 
		G_TERMINAL=21, LAST_TERMINAL=22, END_TERMINAL=23, NOT1_TERMINAL=24, NOT2_TERMINAL=25, 
		AND1_TERMINAL=26, AND2_TERMINAL=27, OR1_TERMINAL=28, OR2_TERMINAL=29, 
		IMPL1_TERMINAL=30, IMPL2_TERMINAL=31, EQUIV1_TERMINAL=32, EQUIV2_TERMINAL=33, 
		XOR_TERMINAL=34, TRUE_TERMINAL=35, FALSE_TERMINAL=36, TT_TERMINAL=37, 
		FF_TERMINAL=38, TIME_POINT=39, NAME=40, URI=41, COMMENT=42, WS=43;
	public static final int
		RULE_trace_position = 0, RULE_prop_booleans = 1, RULE_logic_booleans = 2, 
		RULE_not = 3, RULE_and = 4, RULE_or = 5, RULE_impl = 6, RULE_equiv = 7, 
		RULE_xor = 8, RULE_full_interval = 9, RULE_upper_including_bound_interval = 10, 
		RULE_upper_excluding_bound_interval = 11, RULE_interval = 12, RULE_weak_next = 13, 
		RULE_next = 14, RULE_until = 15, RULE_release = 16, RULE_eventually = 17, 
		RULE_globally = 18, RULE_term = 19, RULE_subject = 20, RULE_role_atom = 21, 
		RULE_concept_atom = 22, RULE_atom = 23, RULE_conjunctive_query = 24, RULE_mtcq_formula = 25, 
		RULE_prefix = 26, RULE_start = 27;
	private static String[] makeRuleNames() {
		return new String[] {
			"trace_position", "prop_booleans", "logic_booleans", "not", "and", "or", 
			"impl", "equiv", "xor", "full_interval", "upper_including_bound_interval", 
			"upper_excluding_bound_interval", "interval", "weak_next", "next", "until", 
			"release", "eventually", "globally", "term", "subject", "role_atom", 
			"concept_atom", "atom", "conjunctive_query", "mtcq_formula", "prefix", 
			"start"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'['", "','", "']'", "'<='", "'<'", "':'", "'?'", "'('", "')'", 
			"'PREFIX'", "'>'", "'X'", "'X[!]'", "'U_'", "'U'", "'R_'", "'R'", "'F_'", 
			"'F'", "'G_'", "'G'", "'last'", "'end'", "'!'", "'~'", "'&'", "'&&'", 
			"'|'", "'||'", "'->'", "'=>'", "'<->'", "'<=>'", "'^'", "'TRUE'", "'FALSE'", 
			"'TT'", "'FF'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"X_TERMINAL", "XB_TERMINAL", "UI_TERMINAL", "U_TERMINAL", "RI_TERMINAL", 
			"R_TERMINAL", "FI_TERMINAL", "F_TERMINAL", "GI_TERMINAL", "G_TERMINAL", 
			"LAST_TERMINAL", "END_TERMINAL", "NOT1_TERMINAL", "NOT2_TERMINAL", "AND1_TERMINAL", 
			"AND2_TERMINAL", "OR1_TERMINAL", "OR2_TERMINAL", "IMPL1_TERMINAL", "IMPL2_TERMINAL", 
			"EQUIV1_TERMINAL", "EQUIV2_TERMINAL", "XOR_TERMINAL", "TRUE_TERMINAL", 
			"FALSE_TERMINAL", "TT_TERMINAL", "FF_TERMINAL", "TIME_POINT", "NAME", 
			"URI", "COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MTCQ.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MTCQParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Trace_positionContext extends ParserRuleContext {
		public TerminalNode LAST_TERMINAL() { return getToken(MTCQParser.LAST_TERMINAL, 0); }
		public TerminalNode END_TERMINAL() { return getToken(MTCQParser.END_TERMINAL, 0); }
		public Trace_positionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_trace_position; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MTCQListener ) ((MTCQListener)listener).enterTrace_position(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MTCQListener ) ((MTCQListener)listener).exitTrace_position(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MTCQVisitor ) return ((MTCQVisitor<? extends T>)visitor).visitTrace_position(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Trace_positionContext trace_position() throws RecognitionException {
		Trace_positionContext _localctx = new Trace_positionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_trace_position);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			_la = _input.LA(1);
			if ( !(_la==LAST_TERMINAL || _la==END_TERMINAL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Prop_booleansContext extends ParserRuleContext {
		public TerminalNode TRUE_TERMINAL() { return getToken(MTCQParser.TRUE_TERMINAL, 0); }
		public TerminalNode FALSE_TERMINAL() { return getToken(MTCQParser.FALSE_TERMINAL, 0); }
		public Prop_booleansContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prop_booleans; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MTCQListener ) ((MTCQListener)listener).enterProp_booleans(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MTCQListener ) ((MTCQListener)listener).exitProp_booleans(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MTCQVisitor ) return ((MTCQVisitor<? extends T>)visitor).visitProp_booleans(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Prop_booleansContext prop_booleans() throws RecognitionException {
		Prop_booleansContext _localctx = new Prop_booleansContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_prop_booleans);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			_la = _input.LA(1);
			if ( !(_la==TRUE_TERMINAL || _la==FALSE_TERMINAL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Logic_booleansContext extends ParserRuleContext {
		public TerminalNode TT_TERMINAL() { return getToken(MTCQParser.TT_TERMINAL, 0); }
		public TerminalNode FF_TERMINAL() { return getToken(MTCQParser.FF_TERMINAL, 0); }
		public Logic_booleansContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logic_booleans; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MTCQListener ) ((MTCQListener)listener).enterLogic_booleans(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MTCQListener ) ((MTCQListener)listener).exitLogic_booleans(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MTCQVisitor ) return ((MTCQVisitor<? extends T>)visitor).visitLogic_booleans(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Logic_booleansContext logic_booleans() throws RecognitionException {
		Logic_booleansContext _localctx = new Logic_booleansContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_logic_booleans);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			_la = _input.LA(1);
			if ( !(_la==TT_TERMINAL || _la==FF_TERMINAL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NotContext extends ParserRuleContext {
		public TerminalNode NOT1_TERMINAL() { return getToken(MTCQParser.NOT1_TERMINAL, 0); }
		public TerminalNode NOT2_TERMINAL() { return getToken(MTCQParser.NOT2_TERMINAL, 0); }
		public NotContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_not; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MTCQListener ) ((MTCQListener)listener).enterNot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MTCQListener ) ((MTCQListener)listener).exitNot(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MTCQVisitor ) return ((MTCQVisitor<? extends T>)visitor).visitNot(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NotContext not() throws RecognitionException {
		NotContext _localctx = new NotContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_not);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			_la = _input.LA(1);
			if ( !(_la==NOT1_TERMINAL || _la==NOT2_TERMINAL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AndContext extends ParserRuleContext {
		public TerminalNode AND1_TERMINAL() { return getToken(MTCQParser.AND1_TERMINAL, 0); }
		public TerminalNode AND2_TERMINAL() { return getToken(MTCQParser.AND2_TERMINAL, 0); }
		public AndContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_and; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MTCQListener ) ((MTCQListener)listener).enterAnd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MTCQListener ) ((MTCQListener)listener).exitAnd(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MTCQVisitor ) return ((MTCQVisitor<? extends T>)visitor).visitAnd(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AndContext and() throws RecognitionException {
		AndContext _localctx = new AndContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_and);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			_la = _input.LA(1);
			if ( !(_la==AND1_TERMINAL || _la==AND2_TERMINAL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OrContext extends ParserRuleContext {
		public TerminalNode OR1_TERMINAL() { return getToken(MTCQParser.OR1_TERMINAL, 0); }
		public TerminalNode OR2_TERMINAL() { return getToken(MTCQParser.OR2_TERMINAL, 0); }
		public OrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_or; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MTCQListener ) ((MTCQListener)listener).enterOr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MTCQListener ) ((MTCQListener)listener).exitOr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MTCQVisitor ) return ((MTCQVisitor<? extends T>)visitor).visitOr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OrContext or() throws RecognitionException {
		OrContext _localctx = new OrContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_or);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			_la = _input.LA(1);
			if ( !(_la==OR1_TERMINAL || _la==OR2_TERMINAL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImplContext extends ParserRuleContext {
		public TerminalNode IMPL1_TERMINAL() { return getToken(MTCQParser.IMPL1_TERMINAL, 0); }
		public TerminalNode IMPL2_TERMINAL() { return getToken(MTCQParser.IMPL2_TERMINAL, 0); }
		public ImplContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_impl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MTCQListener ) ((MTCQListener)listener).enterImpl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MTCQListener ) ((MTCQListener)listener).exitImpl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MTCQVisitor ) return ((MTCQVisitor<? extends T>)visitor).visitImpl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImplContext impl() throws RecognitionException {
		ImplContext _localctx = new ImplContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_impl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			_la = _input.LA(1);
			if ( !(_la==IMPL1_TERMINAL || _la==IMPL2_TERMINAL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EquivContext extends ParserRuleContext {
		public TerminalNode EQUIV1_TERMINAL() { return getToken(MTCQParser.EQUIV1_TERMINAL, 0); }
		public TerminalNode EQUIV2_TERMINAL() { return getToken(MTCQParser.EQUIV2_TERMINAL, 0); }
		public EquivContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_equiv; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MTCQListener ) ((MTCQListener)listener).enterEquiv(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MTCQListener ) ((MTCQListener)listener).exitEquiv(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MTCQVisitor ) return ((MTCQVisitor<? extends T>)visitor).visitEquiv(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EquivContext equiv() throws RecognitionException {
		EquivContext _localctx = new EquivContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_equiv);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			_la = _input.LA(1);
			if ( !(_la==EQUIV1_TERMINAL || _la==EQUIV2_TERMINAL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class XorContext extends ParserRuleContext {
		public TerminalNode XOR_TERMINAL() { return getToken(MTCQParser.XOR_TERMINAL, 0); }
		public XorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_xor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MTCQListener ) ((MTCQListener)listener).enterXor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MTCQListener ) ((MTCQListener)listener).exitXor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MTCQVisitor ) return ((MTCQVisitor<? extends T>)visitor).visitXor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final XorContext xor() throws RecognitionException {
		XorContext _localctx = new XorContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_xor);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(XOR_TERMINAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Full_intervalContext extends ParserRuleContext {
		public List<TerminalNode> TIME_POINT() { return getTokens(MTCQParser.TIME_POINT); }
		public TerminalNode TIME_POINT(int i) {
			return getToken(MTCQParser.TIME_POINT, i);
		}
		public Full_intervalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_full_interval; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MTCQListener ) ((MTCQListener)listener).enterFull_interval(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MTCQListener ) ((MTCQListener)listener).exitFull_interval(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MTCQVisitor ) return ((MTCQVisitor<? extends T>)visitor).visitFull_interval(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Full_intervalContext full_interval() throws RecognitionException {
		Full_intervalContext _localctx = new Full_intervalContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_full_interval);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(T__0);
			setState(75);
			match(TIME_POINT);
			setState(76);
			match(T__1);
			setState(77);
			match(TIME_POINT);
			setState(78);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Upper_including_bound_intervalContext extends ParserRuleContext {
		public TerminalNode TIME_POINT() { return getToken(MTCQParser.TIME_POINT, 0); }
		public Upper_including_bound_intervalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_upper_including_bound_interval; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MTCQListener ) ((MTCQListener)listener).enterUpper_including_bound_interval(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MTCQListener ) ((MTCQListener)listener).exitUpper_including_bound_interval(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MTCQVisitor ) return ((MTCQVisitor<? extends T>)visitor).visitUpper_including_bound_interval(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Upper_including_bound_intervalContext upper_including_bound_interval() throws RecognitionException {
		Upper_including_bound_intervalContext _localctx = new Upper_including_bound_intervalContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_upper_including_bound_interval);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(T__3);
			setState(81);
			match(TIME_POINT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Upper_excluding_bound_intervalContext extends ParserRuleContext {
		public TerminalNode TIME_POINT() { return getToken(MTCQParser.TIME_POINT, 0); }
		public Upper_excluding_bound_intervalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_upper_excluding_bound_interval; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MTCQListener ) ((MTCQListener)listener).enterUpper_excluding_bound_interval(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MTCQListener ) ((MTCQListener)listener).exitUpper_excluding_bound_interval(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MTCQVisitor ) return ((MTCQVisitor<? extends T>)visitor).visitUpper_excluding_bound_interval(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Upper_excluding_bound_intervalContext upper_excluding_bound_interval() throws RecognitionException {
		Upper_excluding_bound_intervalContext _localctx = new Upper_excluding_bound_intervalContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_upper_excluding_bound_interval);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(T__4);
			setState(84);
			match(TIME_POINT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IntervalContext extends ParserRuleContext {
		public Full_intervalContext full_interval() {
			return getRuleContext(Full_intervalContext.class,0);
		}
		public Upper_including_bound_intervalContext upper_including_bound_interval() {
			return getRuleContext(Upper_including_bound_intervalContext.class,0);
		}
		public Upper_excluding_bound_intervalContext upper_excluding_bound_interval() {
			return getRuleContext(Upper_excluding_bound_intervalContext.class,0);
		}
		public IntervalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interval; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MTCQListener ) ((MTCQListener)listener).enterInterval(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MTCQListener ) ((MTCQListener)listener).exitInterval(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MTCQVisitor ) return ((MTCQVisitor<? extends T>)visitor).visitInterval(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IntervalContext interval() throws RecognitionException {
		IntervalContext _localctx = new IntervalContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_interval);
		try {
			setState(89);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(86);
				full_interval();
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				setState(87);
				upper_including_bound_interval();
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 3);
				{
				setState(88);
				upper_excluding_bound_interval();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Weak_nextContext extends ParserRuleContext {
		public TerminalNode X_TERMINAL() { return getToken(MTCQParser.X_TERMINAL, 0); }
		public Weak_nextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_weak_next; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MTCQListener ) ((MTCQListener)listener).enterWeak_next(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MTCQListener ) ((MTCQListener)listener).exitWeak_next(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MTCQVisitor ) return ((MTCQVisitor<? extends T>)visitor).visitWeak_next(this);
			else return visitor.visitChildren(this);
		}
	}
